Fix z-index

--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@ body.loading:before {
     position: absolute;
     bottom: 35px;
     width: 100%;
+    z-index: 100;
 }
 
 #dealerUpcard .instructions {
